--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <ul>
-    	<li>youremail@youremail.com</li>
-    	<li>2145 Sheridan Rd., Evanston, IL, 60201</li>
-    	<li>(123) 456-7890</li>
+    	<li>andrewturchina2015@u.northwestern.edu</li>
+    	<li>1100 Church Street Unit 603, Evanston, IL, 60201</li>
+    	<li>(513) 582-9920</li>
     </ul>
 </footer>
 
